latte/tests/good/str_gc1.lat
int main() {
  {
    string s1 = "asd";
    {
      string s2 = "bcd";
      {
        string s3 = "efd";
        printInt(1);
      }
      printInt(1);
    }
    printInt(1);
    if (s1 == s1) {
      return 0;
    }
  }
  return 1;
}
