latte/tests/bad/type/func/builtin_name.lat
int main() {
  return 0;
}

void printString(string a) {
  return;
}
